# LCDTest

./: CMakeLists.txt  LCDSlideshow.kdev4  README.md  globals.h  lcd_display.cpp  lcd_display.h  lcd_display_types.h  main.cpp  png_view.cpp  png_view.h  regex.cpp  regex.h  user_interface.cpp  user_interface.h
.kdev4/: LCDSlideshow.kdev4
Tests/: .test_patterns.h.kate-swp  a_test.h  def_pix_tests.h  response_time_tests.h  sharpness_tests.h  test_patterns.cpp  uniformity_tests.h  visual_tests.h
Tests/ProductTestRoutines/: _product_display_abstraction.h  avalon_test.h  edge_test.h  supported_products.h
